number of minor fixes

--- a/src/aws-api/console/index.html
+++ b/src/aws-api/console/index.html
@@ -243,6 +243,7 @@
                         <thead>
                             <tr>
                                 <th>Secret Name</th>
+                                <th>Type</th>
                                 <th>Description</th>
                                 <th>Last Modified</th>
                                 <th>Status</th>
