whole bunch of SM changes, aes256, rotation

--- a/src/aws-api/console/index.html
+++ b/src/aws-api/console/index.html
@@ -246,6 +246,7 @@
                                 <th>Type</th>
                                 <th>Description</th>
                                 <th>Last Modified</th>
+                                <th>Rotation Status</th>
                                 <th>Status</th>
                                 <th>Actions</th>
                             </tr>
